--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 anyhow = "1.0.83"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
