--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,11 @@
 name = "my-jira"
 version = "0.1.0"
 edition = "2021"
+authors = ["Michael Brett <mdouglasbrett@icloud.com>"]
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
+tokio-util = "0.7"
 anyhow = "1.0.83"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
