--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2021"
 authors = ["Michael Brett <mdouglasbrett@icloud.com>"]
 
 [dependencies]
+hyper = { version = "1", features = ["full"] }
 tokio = { version = "1", features = ["full"] }
-tokio-util = "0.7"
+http-body-util = "0.1"
+hyper-util = { version = "0.1", features = ["full"] }
 anyhow = "1.0.83"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
