--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ hyper-util = { version = "0.1", features = ["full"] }
 anyhow = "1.0.83"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+thiserror = "2.0.17"
